testsuite/tests/grammar/invalid_lexers/token_matcher.lkt
lexer foo_lexer {
    example <- Foo()
}
